--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,22 @@
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* html {
+  font-family: var(--font-helvetica);
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-family: var(--font-satoshi);
+} */
+@layer utilities {
+  .text-gradient-primary {
+    @apply bg-linear-to-r from-[#D89AFE] to-[#706FE4]
+           bg-clip-text text-transparent;
+  }
+  .btn-gradient {
+    @apply bg-linear-to-r from-[#D89AFE] to-[#706FE4]
+           hover:from-[#706FE4] hover:to-[#D89AFE]
+           transition-all duration-300;
+  }
 }
